--- a/tratamiento.html
+++ b/tratamiento.html
@@ -62,7 +62,7 @@
           <div class="row" class="row-profile">
                   <h3>Relaciones sociales</h3>
                   <hr>
-                  <table class="table table-striped">
+                  <table class="table table-striped table-responsive">
                     <tbody>
                       <tr> <td><a href="#"><img class="img-responsive center-block" src="img/preview.png"></a></td>
                        <td> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
