agregados cambios e iframe de juegos

--- a/index.html
+++ b/index.html
@@ -84,6 +84,9 @@
               </div>
               <div class="info-activity-points col-md-2 col-xs-4 text-center col-sm-2"> <h3> 3 </br> points </h3> </div>
             </section>
+  
+            <iframe src="http://mingosweb.github.io/juegosC2/" height="600px" width="400px" frameborder="0"></iframe>
+
           </div>
 
           <!-- fila para mostrar los seguiemientos hecho por el test -->
