--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
               <div class="info-activity-points col-md-2 col-xs-4 text-center col-sm-2"> <h3> 3 </br> points </h3> </div>
             </section>
   
-            <iframe src="http://mingosweb.github.io/juegosC2/" height="600px" width="400px" frameborder="0"></iframe>
+            <iframe src="http://mingosweb.github.io/juegosC2/" height="200px" frameborder="0"></iframe>
 
           </div>
 
