--- a/index.html
+++ b/index.html
@@ -68,25 +68,7 @@
 
           <!-- fila para mostrar la actividad reciente -->
           <div class="row" id="row-recents">
-            <h2>Actividad reciente</h2>
-
-            <section class="info-activity">
-              <div class="col-md-4 col-xs-12 col col-sm-4" class="info-activity-preview">
-                <a href="juego.html"><img class="img-responsive center-block" src="img/preview.png" height="200"></a>
-              </div>
-              <div class="col-md-6 col-xs-8 col col-sm-6" class="info-activity-description">
-                <h3 class="name"> aprendo a vestirme </h3>
-                <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                consequat.</p>
-                <p> <label class="state"> TERMINADO </label></p>
-              </div>
-              <div class="info-activity-points col-md-2 col-xs-4 text-center col-sm-2"> <h3> 3 </br> points </h3> </div>
-            </section>
-  
-            <iframe src="http://mingosweb.github.io/juegosC2/" height="200px" frameborder="0"></iframe>
-
+             <iframe src="http://mingosweb.github.io/juegosC2/" frameborder="0"></iframe>
           </div>
 
           <!-- fila para mostrar los seguiemientos hecho por el test -->
